--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,9 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <arrow.version>3.0.0</arrow.version>
+        <arrow.snapshot.version>6.0.0-SNAPSHOT</arrow.snapshot.version>
         <dep.guava.version>20.0</dep.guava.version>
         <checkstyle.failOnViolation>true</checkstyle.failOnViolation>
     </properties>
@@ -27,7 +29,7 @@
         <dependency>
             <groupId>org.apache.arrow</groupId>
             <artifactId>flight-core</artifactId>
-            <version>${arrow.version}</version>
+            <version>${arrow.snapshot.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.netty</groupId>
@@ -46,7 +48,12 @@
         <dependency>
             <groupId>org.apache.arrow</groupId>
             <artifactId>flight-grpc</artifactId>
-            <version>${arrow.version}</version>
+            <version>${arrow.snapshot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>flight-sql</artifactId>
+            <version>${arrow.snapshot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
